--- a/Week3/MDF1-wk3/MDF1-wk3/CellViewController.xib
+++ b/Week3/MDF1-wk3/MDF1-wk3/CellViewController.xib
@@ -11,9 +11,10 @@
 			<string key="NS.object.0">1181</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
-			<string>IBProxyObject</string>
-			<string>IBUILabel</string>
 			<string>IBUITableViewCell</string>
+			<string>IBUIImageView</string>
+			<string>IBUILabel</string>
+			<string>IBProxyObject</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -31,19 +32,32 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUITableViewCell" id="871846949">
+			<object class="IBUITableViewCell" id="428015863">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIView" id="598740480">
-						<reference key="NSNextResponder" ref="871846949"/>
+					<object class="IBUIView" id="719653386">
+						<reference key="NSNextResponder" ref="428015863"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUILabel" id="941305575">
-								<reference key="NSNextResponder" ref="598740480"/>
+							<object class="IBUIImageView" id="1042814062">
+								<reference key="NSNextResponder" ref="719653386"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{56, 0}, {264, 43}}</string>
-								<reference key="NSSuperview" ref="598740480"/>
+								<string key="NSFrameSize">{320, 43}</string>
+								<reference key="NSSuperview" ref="719653386"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<object class="NSColor" key="IBUIBackgroundColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC41MDE5NjA4MTQgMCAwAA</bytes>
+								</object>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+							</object>
+							<object class="IBUILabel" id="733360945">
+								<reference key="NSNextResponder" ref="719653386"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{20, 0}, {272, 43}}</string>
+								<reference key="NSSuperview" ref="719653386"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -73,7 +87,7 @@
 							</object>
 						</array>
 						<string key="NSFrameSize">{320, 43}</string>
-						<reference key="NSSuperview" ref="871846949"/>
+						<reference key="NSSuperview" ref="428015863"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -88,10 +102,10 @@
 				</array>
 				<string key="NSFrameSize">{320, 44}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView" ref="598740480"/>
+				<reference key="NSNextKeyView" ref="719653386"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-				<reference key="IBUIContentView" ref="598740480"/>
+				<reference key="IBUIContentView" ref="719653386"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -99,8 +113,8 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">cellLabel</string>
-						<reference key="source" ref="871846949"/>
-						<reference key="destination" ref="941305575"/>
+						<reference key="source" ref="428015863"/>
+						<reference key="destination" ref="733360945"/>
 					</object>
 					<int key="connectionID">6</int>
 				</object>
@@ -126,16 +140,22 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">3</int>
-						<reference key="object" ref="871846949"/>
+						<reference key="object" ref="428015863"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="941305575"/>
+							<reference ref="1042814062"/>
+							<reference ref="733360945"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="941305575"/>
-						<reference key="parent" ref="871846949"/>
+						<reference key="object" ref="733360945"/>
+						<reference key="parent" ref="428015863"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">8</int>
+						<reference key="object" ref="1042814062"/>
+						<reference key="parent" ref="428015863"/>
 					</object>
 				</array>
 			</object>
@@ -146,12 +166,13 @@
 				<string key="3.CustomClassName">TableViewCellController</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">6</int>
+			<int key="maxID">8</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
